--- a/heavycenter/src/main/res/layout/item_myce_unit_new_area.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new_area.xml
@@ -33,22 +33,21 @@
 
         <com.siweisoft.heavycenter.module.view.image.TypeImage
             android:id="@+id/iv_state"
-            android:layout_width="20dp"
-            android:layout_height="20dp" />
+            android:layout_width="17dp"
+            android:layout_height="17dp" />
 
-        <TextView
+        <com.siweisoft.heavycenter.module.view.text.MarqTextView
             android:id="@+id/tv_name"
             android:singleLine="true"
             android:layout_weight="1"
-            android:textSize="17sp"
+            android:textSize="16sp"
             android:textColor="@color/black"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:text="@{item_myce_unit_new_area.value}"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
         <ImageView
-            android:layout_marginLeft="10dp"
             android:src="@drawable/icon_arraw"
             android:layout_width="15dp"
             android:layout_height="15dp" />
