--- a/heavycenter/src/main/res/layout/item_main_trans2_driver.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans2_driver.xml
@@ -2,7 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-                name="item_main_trans2"
+                name="item_main_trans2_driver"
                 type="com.siweisoft.heavycenter.data.netd.trans.detail.TransDetailRes" />
         <import type="android.view.View"/>
         <import type="com.android.lib.util.StringUtil"/>
@@ -11,7 +11,7 @@
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 android:id="@+id/item_main_trans2"
+                                                 android:id="@+id/item_main_trans2_driver"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:background="@drawable/bg_hv_sel_dark_light"
@@ -24,11 +24,11 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                app:color_one="@{item_main_trans2.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+                app:color_one="@{item_main_trans2_driver.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:update="@{item_main_trans2.percent}"/>
+                app:update="@{item_main_trans2_driver.percent}"/>
 
 
         <TextView
@@ -38,8 +38,8 @@
                 android:layout_centerHorizontal="true"
                 android:maxWidth="100dp"
                 android:singleLine="true"
-                android:text="@{item_main_trans2.isshowOpeBtn(item_main_trans2)?item_main_trans2.totalSuttleCN:item_main_trans2.YKCN}"
-                android:textColor="@{item_main_trans2.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+                android:text="@{item_main_trans2_driver.isshowOpeBtn(item_main_trans2_driver)?item_main_trans2_driver.totalSuttleCN:item_main_trans2_driver.YKCN}"
+                android:textColor="@{item_main_trans2_driver.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_carnum"
                 app:layout_constraintLeft_toLeftOf="@+id/circlebar"
@@ -51,8 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text='@{item_main_trans2.carNumberCN}'
-                android:textColor="@{item_main_trans2.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+                android:text='@{item_main_trans2_driver.carNumberCN}'
+                android:textColor="@{item_main_trans2_driver.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
                 android:textSize="13sp"
                 app:layout_constraintLeft_toLeftOf="@+id/circlebar"
                 app:layout_constraintRight_toRightOf="@+id/circlebar"
@@ -66,7 +66,7 @@
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:singleLine="true"
-                android:text='@{StringUtil.getStr(item_main_trans2.productNameAndSpecification)}'
+                android:text='@{StringUtil.getStr(item_main_trans2_driver.productNameAndSpecification)}'
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_recylce_item_title_txtsize"
                 app:layout_constraintLeft_toRightOf="@id/circlebar"
@@ -75,10 +75,26 @@
                 tools:text="混凝土"/>
 
 
+        <TextView
+                tools:visibility="visible"
+                android:id="@+id/type_send_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_hv_sharp2_blue_solid"
+                android:includeFontPadding="false"
+                android:padding="1dp"
+                android:singleLine="true"
+                android:text="来自"
+                android:textSize="12sp"
+                android:visibility="@{item_main_trans2_driver.driver?View.VISIBLE:View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
+                app:layout_constraintLeft_toLeftOf="@+id/productName"
+                app:layout_constraintTop_toTopOf="@+id/tv_sendtime"/>
 
 
 
         <TextView
+                android:layout_marginLeft="10dp"
                 tools:visibility="visible"
                 android:paddingRight="10dp"
                 android:id="@+id/tv_send_comname"
@@ -87,31 +103,15 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{item_main_trans2.upLineTxt}"
+                android:text="@{item_main_trans2_driver.upLineTxt}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-               app:layout_constraintLeft_toLeftOf="@+id/productName"
+                app:layout_constraintLeft_toRightOf="@+id/type_send_left"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
                 app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
                 tools:text="上海绿地"/>
 
 
-        <TextView
-                android:id="@+id/type_send_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@{item_main_trans2.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
-                android:includeFontPadding="false"
-                android:padding="1dp"
-                android:singleLine="true"
-                android:text="发往"
-                android:textSize="12sp"
-                android:layout_marginRight="10dp"
-                android:visibility="@{item_main_trans2.upSecondTypeShow?View.VISIBLE:View.GONE}"
-                app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
-                app:layout_constraintLeft_toRightOf="@+id/tv_send_comname"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
-              />
 
 
         <TextView
@@ -121,14 +121,30 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:singleLine="true"
-                android:text='@{StringUtil.getStr(item_main_trans2.develiverNum)+"t"}'
+                android:text='@{StringUtil.getStr(item_main_trans2_driver.develiverNum)+"t"}'
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tv_sendtime"
+                app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
                 app:layout_constraintRight_toLeftOf="@+id/tv_sendtime"
                 tools:text="10.5t"/>
 
 
+        <TextView
+                tools:visibility="visible"
+                android:id="@+id/type_receipt_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_hv_sharp2_yell_solid"
+                android:includeFontPadding="false"
+                android:padding="1dp"
+                android:singleLine="true"
+                android:text="发往"
+                android:textSize="12sp"
+                android:visibility="@{item_main_trans2_driver.driver?View.VISIBLE:View.GONE}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
+                app:layout_constraintLeft_toLeftOf="@+id/type_send_left"
+                app:layout_constraintTop_toTopOf="@+id/tv_receipttime"/>
 
 
         <TextView
@@ -139,31 +155,17 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{item_main_trans2.downLineTxt}"
+                android:text="@{item_main_trans2_driver.downLineTxt}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-               app:layout_constraintLeft_toLeftOf="@+id/tv_send_comname"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintLeft_toRightOf="@+id/type_receipt_left"
                 app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
                 tools:text="上海绿地"/>
 
 
 
-        <TextView
-                app:layout_constraintLeft_toRightOf="@+id/tv_receipt_comname"
-                android:id="@+id/type_receipt_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@{item_main_trans2.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
-                android:includeFontPadding="false"
-                android:padding="1dp"
-                android:singleLine="true"
-                android:text="发来"
-                android:textSize="12sp"
-                android:layout_marginRight="10dp"
-                android:visibility="@{item_main_trans2.downSecondTypeShow?View.VISIBLE:View.GONE}"
-                app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"/>
 
 
         <TextView
@@ -172,10 +174,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:singleLine="true"
-                android:text='@{item_main_trans2.receiveNumCN}'
+                android:text='@{item_main_trans2_driver.receiveNumCN}'
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tv_receipttime"
+               app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
                 app:layout_constraintRight_toLeftOf="@+id/tv_receipttime"
                 android:layout_marginRight="20dp"
                 tools:text="10.5t"/>
@@ -188,7 +191,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:singleLine="true"
-                android:text="@{item_main_trans2.fhTimeCN}"
+                android:text="@{item_main_trans2_driver.fhTimeCN}"
                 android:textColor="@color/color_grey_400"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@+id/productName"
@@ -202,10 +205,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:singleLine="true"
-                android:text="@{item_main_trans2.shTimeCN}"
+                android:text="@{item_main_trans2_driver.shTimeCN}"
                 android:textColor="@color/color_grey_400"
                 android:textSize="14sp"
-                android:visibility="@{item_main_trans2.isshowOpeBtn(item_main_trans2)?View.GONE:View.VISIBLE}"
+                android:visibility="@{item_main_trans2_driver.isshowOpeBtn(item_main_trans2_driver)?View.GONE:View.VISIBLE}"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_sendtime"
                 android:layout_marginTop="7dp"
@@ -225,37 +228,22 @@
                 android:text="确定"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                android:visibility="@{item_main_trans2.isshowOpeBtn(item_main_trans2)?View.VISIBLE:View.GONE}"
+                android:visibility="@{item_main_trans2_driver.isshowOpeBtn(item_main_trans2_driver)?View.VISIBLE:View.GONE}"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_receipt_comname"
                 tools:visibility="gone"/>
 
 
-        <TextView
-                android:id="@+id/tv_carlicenseno"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:background="@{item_main_trans2.IDiliverCom?@drawable/bg_hv_sharp1_yell_stroke:@drawable/bg_hv_sharp1_blue_stroke}"
-                android:includeFontPadding="false"
-                android:singleLine="true"
-                android:text='@{StringUtil.getStr(item_main_trans2.carLicenseNo)}'
-                android:textColor="@{item_main_trans2.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
-                android:textSize="12sp"
-                android:visibility="@{item_main_trans2.showCarLicense?View.VISIBLE:View.GONE}"
-                app:layout_constraintBottom_toBottomOf="@+id/productName"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/productName"/>
 
 
         <ImageView
                 android:id="@+id/iv_local"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:layout_marginRight="10dp"
-                android:src="@{item_main_trans2.driver?@drawable/icon_trans_local:@drawable/icon_hv_local}"
+                android:layout_marginRight="15dp"
+                android:src="@{item_main_trans2_driver.driver?@drawable/icon_trans_local:@drawable/icon_hv_local}"
                 app:layout_constraintBottom_toBottomOf="@+id/productName"
-                app:layout_constraintRight_toLeftOf="@+id/tv_carlicenseno"
+              app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/productName"/>
 
 
