--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -157,7 +157,7 @@
             android:singleLine="true"
             android:text="@{item_main_order_doing.type}"
             android:textColor="@color/black"
-            android:textSize="13sp"
+            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@+id/tv_duimian"
             app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
@@ -172,7 +172,7 @@
             android:layout_marginTop="10dp"
             android:includeFontPadding="false"
             android:singleLine="true"
-            android:text="@{item_main_order_doing.accessComName}"
+            android:text="@{item_main_order_doing.shortAccessComName}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
             app:layout_constraintLeft_toRightOf="@+id/tv_type"
