--- a/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
@@ -7,6 +7,7 @@
         <variable
             name="frag_main_trans_detail"
             type="com.siweisoft.heavycenter.data.netd.trans.detail.TransDetailRes" />
+        <import type="android.view.View"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -16,6 +17,8 @@
         android:background="@color/white">
 
         <com.android.lib.view.title.TitleView
+            style_common:layout_constraintLeft_toLeftOf="parent"
+            style_common:layout_constraintTop_toTopOf="parent"
             android:elevation="2dp"
             android:background="@color/color_base"
             android:id="@+id/title"
@@ -23,8 +26,21 @@
             android:layout_height="wrap_content"
             style_common:iv_left="@drawable/icon_hv_back"
             style_common:iv_right="@drawable/icon_hv_scan"
-            style_common:iv_right2="@drawable/icon_hv_save"
             style_common:txt_mid="运输单详情"/>
+
+
+
+
+
+        <android.support.constraint.ConstraintLayout
+        android:visibility="@{frag_main_trans_detail==null?View.INVISIBLE:View.VISIBLE}"
+        style_common:layout_constraintTop_toBottomOf="@+id/title"
+        style_common:layout_constraintLeft_toLeftOf="parent"
+        style_common:layout_constraintRight_toRightOf="parent"
+        style_common:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/white">
 
         <android.support.constraint.Guideline
             android:id="@+id/line_left"
@@ -33,12 +49,6 @@
             android:orientation="vertical"
             app:layout_constraintGuide_begin="20dp"/>
 
-        <android.support.constraint.Guideline
-            android:id="@+id/line_top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="70dp"/>
 
         <android.support.constraint.Guideline
             android:id="@+id/line_right"
@@ -67,24 +77,29 @@
             android:singleLine="true"
             android:text="@{frag_main_trans_detail.productNameAndSpecification}"
             android:textColor="@color/white"
-            android:textSize="@dimen/hv_dimen_text_title_aaaaa"
+            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintLeft_toLeftOf="@+id/line_left"
-            app:layout_constraintTop_toTopOf="@+id/line_top"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
 
         <TextView
+            android:visibility="@{frag_main_trans_detail==null?View.INVISIBLE:View.VISIBLE}"
             tools:text="第一车"
             android:text="@{frag_main_trans_detail.carNumberCN2}"
             android:id="@+id/tv_carno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_hv_sharp2_blue_solid"
-            android:padding="1dp"
+            android:background="@{frag_main_trans_detail.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+
             android:textColor="@color/black"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintRight_toRightOf="@+id/line_right"
-            style_common:layout_constraintTop_toTopOf="@+id/line_top"
+            style_common:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="13dp"
             />
 
@@ -101,13 +116,12 @@
             android:padding="1dp"
             android:singleLine="true"
             android:textSize="13sp"
-            android:visibility="visible"
-            tools:text="@{frag_main_trans_detail.type}"
+            android:visibility="@{frag_main_trans_detail==null?View.INVISIBLE:View.VISIBLE}"
+            tools:text="来自"
             android:background="@{frag_main_trans_detail.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
             android:includeFontPadding="false"
             android:text="@{frag_main_trans_detail.type}"
             android:textColor="@color/black"
-
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_duimian"
    />
 
@@ -275,15 +289,6 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"/>
 
-        <com.siweisoft.heavycenter.module.view.menu.ScrollMenu
-            android:layout_marginTop="-1dp"
-            android:layout_below="@+id/ll_root"
-            android:id="@+id/scrollmenu"
-            android:layout_width="match_parent"
-            style_common:layout_constraintTop_toTopOf="@+id/line"
-            style_common:layout_constraintBottom_toBottomOf="@+id/line"
-            style_common:layout_constraintLeft_toLeftOf="parent"
-            android:layout_height="2dp"/>
 
 
         <android.support.v4.view.ViewPager
@@ -295,6 +300,27 @@
             android:layout_width="0dp"
             android:layout_height="0dp"/>
 
+        <View
+            android:id="@+id/sfline"
+           style_common:layout_constraintTop_toTopOf="@+id/line"
+            style_common:layout_constraintBottom_toBottomOf="@+id/line"
+            style_common:layout_constraintLeft_toLeftOf="@+id/tv_lab_delive"
+            style_common:layout_constraintRight_toRightOf="@+id/tv_lab_delive"
+            android:background="@drawable/bg_hv_sharp2_blue_solid"
+            android:layout_width="0dp"
+            android:layout_height="4dp"/>
+
+
+        <View
+            android:id="@+id/ssline"
+            style_common:layout_constraintTop_toTopOf="@+id/line"
+            style_common:layout_constraintBottom_toBottomOf="@+id/line"
+            style_common:layout_constraintLeft_toLeftOf="@+id/tv_lab_receipt"
+            style_common:layout_constraintRight_toRightOf="@+id/tv_lab_receipt"
+            android:background="@drawable/bg_hv_sharp2_yell_solid"
+            android:layout_width="0dp"
+            android:layout_height="2dp"/>
+    </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
