--- a/heavycenter/src/main/res/layout/item_main_msg_all.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_all.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <com.siweisoft.heavycenter.module.view.text.BgTextView
+            <TextView
                 style_common:layout_constraintTop_toTopOf="@+id/tv_sendname"
                 style_common:layout_constraintBottom_toBottomOf="@+id/tv_sendname"
                 style_common:layout_constraintLeft_toRightOf="@+id/tv_sendname"
