--- a/heavycenter/src/main/res/layout/item_main_order_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_done.xml
@@ -37,6 +37,7 @@
 
 
         <TextView
+
             android:padding="1dp"
             tools:text="来自"
             android:background="@{item_main_order_done.IDiliverCom?@drawable/bg_hv_sharp2_yell_solid:@drawable/bg_hv_sharp2_blue_solid}"
@@ -47,7 +48,7 @@
             android:id="@+id/tv_type"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textSize="13sp"
+            android:textSize="12sp"
 
             android:text="@{item_main_order_done.type}"
             android:layout_width="wrap_content"
@@ -63,7 +64,7 @@
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            android:text="@{item_main_order_done.accessComName}"
+            android:text="@{item_main_order_done.shortAccessComName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
