--- a/heavycenter/src/main/res/layout/item_main_trans_driver.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans_driver.xml
@@ -2,7 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="item_main_trans_send"
+            name="item_main_trans_driver"
             type="com.siweisoft.heavycenter.data.netd.trans.detail.TransDetailRes" />
         <import type="android.view.View"/>
         <import type="com.android.lib.util.StringUtil"/>
@@ -11,7 +11,7 @@
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/item_main_trans_send"
+        android:id="@+id/item_main_trans_driver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_hv_sel_dark_light"
@@ -24,11 +24,11 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            app:color_one="@color/color_hv_yelll"
+            app:color_one="@{item_main_trans_driver.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:update="@{item_main_trans_send.percent}"/>
+            app:update="@{item_main_trans_driver.percent}"/>
 
 
         <TextView
@@ -38,8 +38,8 @@
             android:layout_centerHorizontal="true"
             android:maxWidth="100dp"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.isFinished(item_main_trans_send)?item_main_trans_send.YKCN:item_main_trans_send.totalSuttleCN}"
-            android:textColor="@color/color_hv_yelll"
+            android:text="@{item_main_trans_driver.isFinished(item_main_trans_driver)?item_main_trans_driver.YKCN:item_main_trans_driver.totalSuttleCN}"
+            android:textColor="@{item_main_trans_driver.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_carnum"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
@@ -51,8 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.carNumberCN}"
-            android:textColor="@color/color_hv_yelll"
+            android:text='@{item_main_trans_driver.carNumberCN}'
+            android:textColor="@{item_main_trans_driver.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
             android:textSize="13sp"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
             app:layout_constraintRight_toRightOf="@+id/circlebar"
@@ -66,7 +66,7 @@
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.productNameAndSpecification}"
+            android:text="@{item_main_trans_driver.productNameAndSpecification}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintLeft_toRightOf="@id/circlebar"
@@ -75,43 +75,42 @@
             tools:text="混凝土"/>
 
 
+        <TextView
+            android:textColor="@color/black"
+            tools:visibility="visible"
+            android:id="@+id/type_send_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_hv_sharp2_blue_solid"
+            android:includeFontPadding="false"
+            android:padding="1dp"
+            android:singleLine="true"
+            android:text="来自"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
+            app:layout_constraintLeft_toLeftOf="@+id/productName"
+            app:layout_constraintTop_toTopOf="@+id/tv_sendtime"/>
 
 
 
         <TextView
+            android:layout_marginLeft="5dp"
             tools:visibility="visible"
             android:id="@+id/tv_send_comname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.trueNameCN}"
+            android:text="@{item_main_trans_driver.develiverCompanyNameCN}"
             android:textColor="@color/white"
-            android:layout_marginRight="5dp"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            app:layout_constraintLeft_toLeftOf="@+id/productName"
-            app:layout_constraintRight_toLeftOf="@+id/type_send_right"
+            app:layout_constraintLeft_toRightOf="@+id/type_send_left"
             app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
-            app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
-            tools:text="王尼玛"/>
-
-
-        <TextView
-            android:textColor="@color/black"
-            android:id="@+id/type_send_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_hv_sharp2_yell_solid"
-            android:includeFontPadding="false"
-            android:padding="1dp"
-            android:singleLine="true"
-            android:text="发往"
-            android:textSize="12sp"
-            android:layout_marginRight="5dp"
             app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
             app:layout_constraintRight_toLeftOf="@+id/tv_sendnum"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
-            />
+            tools:text="上海绿地"/>
+
+
 
 
         <TextView
@@ -124,30 +123,49 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@{item_main_trans_send.develiverNumCN}"
+            android:text="@{item_main_trans_driver.develiverNumCN}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_sendtime"
+            app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
             app:layout_constraintRight_toLeftOf="@+id/tv_sendtime"
-            tools:text="1011.5t"/>
-
-
+            tools:text="10.5t"/>
 
 
         <TextView
+            android:textColor="@color/black"
+            tools:visibility="visible"
+            android:id="@+id/type_receipt_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_hv_sharp2_yell_solid"
+            android:includeFontPadding="false"
+            android:padding="1dp"
+            android:singleLine="true"
+            android:text="发往"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
+            app:layout_constraintLeft_toLeftOf="@+id/type_send_left"
+            app:layout_constraintTop_toTopOf="@+id/tv_receipttime"/>
+
+
+        <TextView
+            android:layout_marginRight="5dp"
             android:id="@+id/tv_receipt_comname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.receiveCompanyNameCN}"
+            android:text="@{item_main_trans_driver.receiveCompanyNameCN}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_send_comname"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintLeft_toRightOf="@+id/type_receipt_left"
             app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
             app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
             app:layout_constraintRight_toLeftOf="@+id/tv_receiptnum"
-            tools:text="上海绿地上海绿地上海绿地"/>
+            tools:text="上海绿地"/>
+
 
 
 
@@ -160,10 +178,12 @@
             android:id="@+id/tv_receiptnum"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:text="@{item_main_trans_send.receiveNumCN}"
+            android:layout_weight="1"
+            android:text="@{item_main_trans_driver.receiveNumCN}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_receipttime"
+            app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
             app:layout_constraintRight_toLeftOf="@+id/tv_receipttime"
             android:layout_marginRight="15dp"
             tools:text="10.5t"/>
@@ -171,19 +191,18 @@
 
         <TextView
             android:gravity="right|center_vertical"
-            tools:text="03-08 17:14"
             android:layout_marginTop="7dp"
             android:id="@+id/tv_sendtime"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.fhTimeCN}"
+            android:text="@{item_main_trans_driver.fhTimeCN}"
             android:textColor="@color/color_grey_400"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@+id/productName"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            tools:text="03-08 17:14"/>
 
 
         <TextView
@@ -194,59 +213,25 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:singleLine="true"
+            android:text='@{item_main_trans_driver.isshowOpeBtn(item_main_trans_driver)?"":item_main_trans_driver.shTimeCN}'
             android:textColor="@color/color_grey_400"
             android:textSize="14sp"
-            android:text='@{item_main_trans_send.isshowOpeBtn(item_main_trans_send)?"":item_main_trans_send.shTimeCN}'
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sendtime"
-            android:layout_marginTop="7dp"
-            />
+            android:layout_marginTop="7dp"/>
 
 
-        <TextView
-            android:id="@+id/tv_y"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/drawable_hv_bg_btn_login"
-            android:gravity="center"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="确定"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:visibility="@{item_main_trans_send.isshowOpeBtn(item_main_trans_send)?View.VISIBLE:View.GONE}"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_receipt_comname"
-            tools:visibility="gone"/>
 
-
-        <TextView
-            android:id="@+id/tv_carlicenseno"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/bg_hv_sharp1_yell_stroke"
-            android:includeFontPadding="false"
-            android:singleLine="true"
-            android:text='@{item_main_trans_send.carLicenseNoCN}'
-            android:textColor="@color/color_hv_yelll"
-            android:textSize="12sp"
-            android:visibility="@{item_main_trans_send.showCarLicense?View.VISIBLE:View.GONE}"
-            app:layout_constraintBottom_toBottomOf="@+id/productName"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/productName"/>
 
 
         <ImageView
             android:id="@+id/iv_local"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_marginRight="5dp"
-            android:src="@drawable/icon_hv_local"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/icon_trans_local"
             app:layout_constraintBottom_toBottomOf="@+id/productName"
-            app:layout_constraintRight_toLeftOf="@+id/tv_carlicenseno"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/productName"/>
 
 
