--- a/heavycenter/src/main/res/layout/item_main_trans_receipt.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans_receipt.xml
@@ -2,7 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="item_main_trans_send"
+            name="item_main_trans_receipt"
             type="com.siweisoft.heavycenter.data.netd.trans.detail.TransDetailRes" />
         <import type="android.view.View"/>
         <import type="com.android.lib.util.StringUtil"/>
@@ -11,7 +11,7 @@
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/item_main_trans_send"
+        android:id="@+id/item_main_trans_receipt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_hv_sel_dark_light"
@@ -24,11 +24,11 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            app:color_one="@color/color_hv_yelll"
+            app:color_one="@color/color_hv_blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:update="@{item_main_trans_send.percent}"/>
+            app:update="@{item_main_trans_receipt.percent}"/>
 
 
         <TextView
@@ -38,8 +38,8 @@
             android:layout_centerHorizontal="true"
             android:maxWidth="100dp"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.isFinished(item_main_trans_send)?item_main_trans_send.YKCN:item_main_trans_send.totalSuttleCN}"
-            android:textColor="@color/color_hv_yelll"
+            android:text="@{item_main_trans_receipt.isFinished(item_main_trans_receipt)?item_main_trans_receipt.YKCN:item_main_trans_receipt.totalSuttleCN}"
+            android:textColor="@color/color_hv_blue"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_carnum"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
@@ -51,8 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.carNumberCN}"
-            android:textColor="@color/color_hv_yelll"
+            android:text="@{item_main_trans_receipt.carNumberCN}"
+            android:textColor="@color/color_hv_blue"
             android:textSize="13sp"
             app:layout_constraintLeft_toLeftOf="@+id/circlebar"
             app:layout_constraintRight_toRightOf="@+id/circlebar"
@@ -66,7 +66,7 @@
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.productNameAndSpecification}"
+            android:text="@{item_main_trans_receipt.productNameAndSpecification}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
             app:layout_constraintLeft_toRightOf="@id/circlebar"
@@ -79,39 +79,23 @@
 
 
         <TextView
+            android:layout_marginRight="5dp"
             tools:visibility="visible"
             android:id="@+id/tv_send_comname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.trueNameCN}"
+            android:text="@{item_main_trans_receipt.develiverCompanyNameCN}"
             android:textColor="@color/white"
-            android:layout_marginRight="5dp"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
             app:layout_constraintLeft_toLeftOf="@+id/productName"
-            app:layout_constraintRight_toLeftOf="@+id/type_send_right"
             app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
-            app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
-            tools:text="王尼玛"/>
-
-
-        <TextView
-            android:textColor="@color/black"
-            android:id="@+id/type_send_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_hv_sharp2_yell_solid"
-            android:includeFontPadding="false"
-            android:padding="1dp"
-            android:singleLine="true"
-            android:text="发往"
-            android:textSize="12sp"
-            android:layout_marginRight="5dp"
             app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
             app:layout_constraintRight_toLeftOf="@+id/tv_sendnum"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
-            />
+            tools:text="上海绿地"/>
+
+
 
 
         <TextView
@@ -123,33 +107,51 @@
             android:id="@+id/tv_sendnum"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@{item_main_trans_send.develiverNumCN}"
+            android:text="@{item_main_trans_receipt.develiverNumCN}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_sendtime"
+            app:layout_constraintTop_toTopOf="@+id/tv_sendtime"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_sendtime"
             app:layout_constraintRight_toLeftOf="@+id/tv_sendtime"
-            tools:text="1011.5t"/>
+            tools:text="10.5t"/>
 
 
 
 
         <TextView
+            android:layout_marginRight="5dp"
+            android:marqueeRepeatLimit="marquee_forever"
             android:id="@+id/tv_receipt_comname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.receiveCompanyNameCN}"
+            android:text="@{item_main_trans_receipt.trueNameCN}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
             app:layout_constraintLeft_toLeftOf="@+id/tv_send_comname"
             app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
             app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
-            app:layout_constraintRight_toLeftOf="@+id/tv_receiptnum"
-            tools:text="上海绿地上海绿地上海绿地"/>
+            app:layout_constraintRight_toLeftOf="@+id/type_receipt_right"
+            tools:text="上海绿地"/>
 
 
+
+        <TextView
+            android:textColor="@color/black"
+           app:layout_constraintRight_toLeftOf="@+id/tv_receiptnum"
+            android:id="@+id/type_receipt_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_hv_sharp2_blue_solid"
+            android:includeFontPadding="false"
+            android:padding="1dp"
+            android:singleLine="true"
+            android:text="发来"
+            android:textSize="12sp"
+            android:layout_marginRight="5dp"
+            app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"/>
 
 
         <TextView
@@ -160,10 +162,11 @@
             android:id="@+id/tv_receiptnum"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:text="@{item_main_trans_send.receiveNumCN}"
+            android:text="@{item_main_trans_receipt.receiveNumCN}"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_receipttime"
+           app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
             app:layout_constraintRight_toLeftOf="@+id/tv_receipttime"
             android:layout_marginRight="15dp"
             tools:text="10.5t"/>
@@ -178,7 +181,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:singleLine="true"
-            android:text="@{item_main_trans_send.fhTimeCN}"
+            android:text="@{item_main_trans_receipt.fhTimeCN}"
             android:textColor="@color/color_grey_400"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@+id/productName"
@@ -194,9 +197,9 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:singleLine="true"
+            android:text='@{item_main_trans_receipt.isshowOpeBtn(item_main_trans_receipt)?"":item_main_trans_receipt.shTimeCN}'
             android:textColor="@color/color_grey_400"
             android:textSize="14sp"
-            android:text='@{item_main_trans_send.isshowOpeBtn(item_main_trans_send)?"":item_main_trans_send.shTimeCN}'
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sendtime"
             android:layout_marginTop="7dp"
@@ -216,7 +219,7 @@
             android:text="确定"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:visibility="@{item_main_trans_send.isshowOpeBtn(item_main_trans_send)?View.VISIBLE:View.GONE}"
+            android:visibility="@{item_main_trans_receipt.isshowOpeBtn(item_main_trans_receipt)?View.VISIBLE:View.GONE}"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_receipt_comname"
             tools:visibility="gone"/>
@@ -227,13 +230,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:background="@drawable/bg_hv_sharp1_yell_stroke"
+            android:background="@drawable/bg_hv_sharp1_blue_stroke"
             android:includeFontPadding="false"
             android:singleLine="true"
-            android:text='@{item_main_trans_send.carLicenseNoCN}'
-            android:textColor="@color/color_hv_yelll"
+            android:text="@{item_main_trans_receipt.carLicenseNoCN}"
+            android:textColor="@color/color_hv_blue"
             android:textSize="12sp"
-            android:visibility="@{item_main_trans_send.showCarLicense?View.VISIBLE:View.GONE}"
+            android:visibility="@{item_main_trans_receipt.showCarLicense?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="@+id/productName"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/productName"/>
@@ -244,7 +247,7 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginRight="5dp"
-            android:src="@drawable/icon_hv_local"
+            android:src="@drawable/icon_hv_local_blue"
             app:layout_constraintBottom_toBottomOf="@+id/productName"
             app:layout_constraintRight_toLeftOf="@+id/tv_carlicenseno"
             app:layout_constraintTop_toTopOf="@+id/productName"/>
