--- a/lib/src/main/res/layout/dialog_loading_havetitle.xml
+++ b/lib/src/main/res/layout/dialog_loading_havetitle.xml
@@ -7,6 +7,7 @@
 
 
     <RelativeLayout
+        android:layout_marginTop="@dimen/dimens_base_title_clip"
             android:clickable="true"
             android:layout_width="match_parent"
                     android:layout_height="match_parent">
