--- a/lib/src/main/res/layout/item_title5.xml
+++ b/lib/src/main/res/layout/item_title5.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -7,7 +7,7 @@
             name="titlebean5"
             type="String" />
     </data>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ftitle_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimens_base_title_clip"
@@ -18,6 +18,9 @@
         android:orientation="vertical">
 
     <ImageView
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/ftv_back"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -30,34 +33,32 @@
         android:visibility="visible" />
 
 
-    <TextView
-        android:id="@+id/ftv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="@drawable/drawable_title"
-      android:padding="3dp"
-        android:textColor="@color/white"
-        android:textSize="21sp"
-        android:visibility="visible" />
+
+
+        <ImageView
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:transitionName="right"
+            android:id="@+id/ftv_right"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:gravity="center_vertical"
+            android:padding="3dp"
+            android:textColor="@color/color_title_select"
+            android:textSize="17sp"
+            android:visibility="visible" />
+
+
 
 
     <ImageView
-        android:transitionName="right"
-        android:id="@+id/ftv_right"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:gravity="center_vertical"
-       android:padding="3dp"
-        android:textColor="@color/color_title_select"
-        android:textSize="17sp"
-        android:visibility="visible" />
-
-
-    <ImageView
+        app:layout_constraintRight_toLeftOf="@+id/ftv_right"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:transitionName="right2"
         android:layout_toLeftOf="@id/ftv_right"
         android:id="@+id/ftv_right2"
@@ -71,6 +72,48 @@
         android:textSize="17sp"
         android:visibility="visible" />
 
-</RelativeLayout>
+
+
+        <android.support.constraint.ConstraintLayout
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/ftv_midicon"
+                android:id="@+id/ftv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/drawable_title"
+                android:padding="3dp"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                android:visibility="visible" />
+
+
+
+            <ImageView
+
+                app:layout_constraintLeft_toRightOf="@+id/ftv_title"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:transitionName="right"
+                android:id="@+id/ftv_midicon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:padding="3dp"
+                android:textColor="@color/color_title_select"
+                android:visibility="gone" />
+        </android.support.constraint.ConstraintLayout>
+
+
+</android.support.constraint.ConstraintLayout>
 
 </layout>
