--- a/heavycenter/src/main/res/layout/frag_main_weight_set.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weight_set.xml
@@ -73,6 +73,7 @@
 
 
             <TextView
+                android:id="@+id/tv_value"
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/color_hv_yelll"
                     android:textSize="22sp"
