--- a/heavycenter/src/main/res/layout/frag_main_weigt.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigt.xml
@@ -31,7 +31,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/guideline1"
-            android:layout_marginBottom="1dp"
+            android:layout_marginBottom="4dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -77,7 +77,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:textColor="@color/color_hv_txt_dark"
-            android:textSize="@dimen/hv_dimen_text_a"
+            android:textSize="15sp"
             android:text="毛重"
             android:layout_height="wrap_content" />
 
@@ -90,7 +90,7 @@
             android:gravity="center"
             android:layout_width="wrap_content"
             android:textColor="@color/color_hv_txt_dark"
-            android:textSize="@dimen/hv_dimen_text_a"
+            android:textSize="15sp"
             android:text="皮重"
             android:layout_height="wrap_content" />
 
@@ -103,7 +103,7 @@
             android:gravity="center"
             android:layout_width="wrap_content"
             android:textColor="@color/color_hv_txt_dark"
-            android:textSize="@dimen/hv_dimen_text_a"
+            android:textSize="15sp"
             android:text="扣除"
             android:layout_height="wrap_content" />
 
@@ -116,7 +116,7 @@
             android:gravity="center"
             android:layout_width="wrap_content"
             android:textColor="@color/color_hv_txt_dark"
-            android:textSize="@dimen/hv_dimen_text_a"
+            android:textSize="15sp"
             android:text="净重"
             android:layout_height="wrap_content" />
 
@@ -144,7 +144,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/color_hv_yelll"
             android:textSize="@dimen/hv_dimen_text_big"
             android:text="2333"
             android:layout_height="wrap_content" />
