--- a/heavycenter/src/main/res/layout/item_main_trans_driver.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans_driver.xml
@@ -19,8 +19,8 @@
 
         <com.siweisoft.heavycenter.module.view.circle.CircleBar
             android:id="@+id/circlebar"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -180,7 +180,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@{item_main_trans_driver.receiveNumCN}"
-            android:textColor="@color/white"
+            android:textColor="@color/color_hv_yelll"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
             app:layout_constraintTop_toTopOf="@+id/tv_receipttime"
             app:layout_constraintBottom_toBottomOf="@+id/tv_receipttime"
